sidekiq-dep-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sidekiq
  name: sidekiq-scheduler
  namespace: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/external-network: "true"
        io.kompose.network/internal-network: "true"
        io.kompose.service: sidekiq
    spec:
      containers:
        - args:
            - bundle
            - exec
            - sidekiq
            - -q
            - scheduler
            - -c
            - "5"
          image: tootsuite/mastodon:v4.0.2
          livenessProbe:
            exec:
              command:
                - ps aux | grep '[s]idekiq 6' || false
          name: sidekiq
          resources: {}
      restartPolicy: Always
status: {}
