streaming-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: streaming
  name: streaming
  namespace: mastodon
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: streaming
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/external-network: "true"
        io.kompose.network/internal-network: "true"
        io.kompose.service: streaming
    spec:
      containers:
        - args:
            - node
            - ./streaming
          image: tootsuite/mastodon:v4.0.2
          livenessProbe:
            exec:
              command:
                - wget -q --spider --proxy=off localhost:4000/api/v1/streaming/health || exit 1
          name: streaming
          ports:
            - containerPort: 4000
          resources: {}
      restartPolicy: Always
status: {}
