web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: mastodon
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/external-network: "true"
        io.kompose.network/internal-network: "true"
        io.kompose.service: web
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              io.kompose.service: web    
      containers:
        - args:
            - bash
            - -c
            - rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000
          image: tootsuite/mastodon:v4.0.2
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
          name: web
          ports:
            - containerPort: 3000
      restartPolicy: Always
status: {}
