web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: mastodon
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    io.kompose.service: web
  type: ClusterIP
  sessionAffinity: "None"
